<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
    
    <android.support.v4.view.ViewPager android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@id/view_pager"/>
	
	
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/divider_line_color"
          android:layout_above="@+id/radio_group"/>
    <RadioGroup android:layout_width="match_parent"
                android:layout_height="@dimen/lg_h"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:checkedButton="@id/photo_show"
                android:id="@+id/radio_group">
        
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="@string/item_photo"
                     android:textSize="@dimen/normal_font_size"
                     android:textColor="@drawable/radiobutton_back_selector"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:button="@null"
                     android:id="@id/photo_show"
                    />
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="@string/item_forum"
                     android:textSize="@dimen/normal_font_size"
                     android:textColor="@drawable/radiobutton_back_selector"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:button="@null"
                     android:id="@id/forum"
                     />
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="@string/item_transfer"
                     android:textSize="@dimen/normal_font_size"
                     android:textColor="@drawable/radiobutton_back_selector"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:button="@null"
                     android:id="@id/transfer"
                     />
        <RadioButton android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:text="@string/item_setting"
                     android:textSize="@dimen/normal_font_size"
                     android:textColor="@drawable/radiobutton_back_selector"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:button="@null"
                     android:id="@id/setting"
                     />
        
    </RadioGroup>
    
    
</RelativeLayout>

